--- a/research.html
+++ b/research.html
@@ -170,7 +170,7 @@
     <h2><a id="published-papers-updated" class="anchor" href="#publications" aria-hidden="true">
       <span class="octicon octicon-link"></span></a>Published &amp; Forthcoming Papers</h2>
 
-    <a style="margin:0; font-size:100%; font-weight:bold" href="https://ieeexplore.ieee.org/document/9978677">
+    <p style="margin:0; font-size:100%; font-weight:bold" href="https://ieeexplore.ieee.org/document/9978677">
       Robust Global Attitude Control: Random Reset Rule</a> <br> 
         with Dandan Zhang 
         and <a href="http://www.cse.zju.edu.cn/english/redir.php?catalog_id=1113878&object_id=1115940">hongye Su</a> <br> 
@@ -187,7 +187,7 @@
       A benchmark case for the attitude tracking control of a miniature quadrotor prototype verifies the designed random reset rule. </p></div><br>
   
 
-    <a style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="https://ieeexplore.ieee.org/document/9525305">
+    <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="https://ieeexplore.ieee.org/document/9525305">
       Event-triggered Fixed-time Attitude Consensus with Fixed and Switching Topologies</a> <br> 
       with <a href="https://www.uvic.ca/research/labs/acipl/groupmembers/administration/profiles/shiyang.php">Yang Shi</a>, 
       <a href="http://www.ytangecust.com/">Yang Tang</a>,
@@ -207,7 +207,8 @@
       Numerical simulations are conducted to verify the validity of the theoretical results finally.</p></div><br>
   
 
-    <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="https://www.sciencedirect.com/science/article/abs/pii/S0005109822003168">
+    <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" 
+      href="https://www.sciencedirect.com/science/article/abs/pii/S0005109822003168">
       Event-triggered attitude synchronization of multiple rigid body systems with velocity-free measurements</a> <br> 
       with <a href="http://www.ytangecust.com/">Yang Tang</a>, 
       <a href="https://www.uvic.ca/research/labs/acipl/groupmembers/administration/profiles/shiyang.php">Yang Shi</a>,
@@ -229,7 +230,8 @@
 
     <h2><a id="works-in-progress" class="anchor" href="#workinprogress" aria-hidden="true"><span class="octicon octicon-link"></span></a>Works in Progress</h2>
 
-    <p style="margin:0"> <b>Beating the Heat: Temperature and Spatial Reallocation over the Long Run</b> <br> with <a href="https://www.christosmakridis.com/">Christos Makridis</a>. <br><button class="accordion">
+    <p style="margin:0"> <b>Beating the Heat: Temperature and Spatial Reallocation over the Long Run</b> <br> with 
+      <a href="https://www.christosmakridis.com/">Christos Makridis</a>. <br><button class="accordion">
       Abstract
     </button>
     <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> 
