--- a/research.html
+++ b/research.html
@@ -169,7 +169,8 @@
 
     <h2><a id="published-papers-updated" class="anchor" href="#publications" aria-hidden="true">
       <span class="octicon octicon-link"></span></a>Published &amp; Forthcoming Papers</h2>
-
+    <hr>
+    
     <p style="margin:0; font-size:100%; font-weight:bold" href="https://ieeexplore.ieee.org/document/9978677">
       Robust Global Attitude Control: Random Reset Rule</a> <br> 
         with Dandan Zhang 
@@ -212,7 +213,7 @@
       Event-triggered attitude synchronization of multiple rigid body systems with velocity-free measurements</a> <br> 
       with <a href="http://www.ytangecust.com/">Yang Tang</a>, 
       <a href="https://www.uvic.ca/research/labs/acipl/groupmembers/administration/profiles/shiyang.php">Yang Shi</a>,
-      <a href="https://scholar.google.com/citations?user=3o-0DvYAAAAJ&hl=en">Wenli Du</a><br>
+      and <a href="https://scholar.google.com/citations?user=3o-0DvYAAAAJ&hl=en">Wenli Du</a><br>
       <i>Automatica</i>, 2022, 143: 110460.  <br><button class="accordion"> 
       Abstract
     </button>
@@ -228,7 +229,9 @@
       of the proposed control strategy.</p></div><br>
 
 
-    <h2><a id="works-in-progress" class="anchor" href="#workinprogress" aria-hidden="true"><span class="octicon octicon-link"></span></a>Works in Progress</h2>
+    <h2><a id="works-in-progress" class="anchor" href="#workinprogress" aria-hidden="true"><span class="octicon octicon-link">
+
+    </span></a>Works in Progress</h2>
 
     <p style="margin:0"> <b>Beating the Heat: Temperature and Spatial Reallocation over the Long Run</b> <br> with 
       <a href="https://www.christosmakridis.com/">Christos Makridis</a>. <br><button class="accordion">
