--- a/research.html
+++ b/research.html
@@ -171,9 +171,9 @@
       <span class="octicon octicon-link"></span></a>Published &amp; Forthcoming Papers</h2>
   
 
-    <p style="margin:0; font-size:100%; font-weight:bold" href="https://ieeexplore.ieee.org/document/9978677">
+    <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="https://ieeexplore.ieee.org/document/9978677">
       Robust Global Attitude Control: Random Reset Rule</a> <br> 
-        with Dandan Zhang and <a href="http://www.cse.zju.edu.cn/english/redir.php?catalog_id=1113878&object_id=1115940">hongye Su</a> <br> 
+        with <a>Dandan Zhang</a> and <a href="http://www.cse.zju.edu.cn/english/redir.php?catalog_id=1113878&object_id=1115940">hongye Su</a> <br> 
         <i>IEEE Transactions on Automatic Control</i>, 
         Forthcoming. <br><button class="accordion"> 
     Abstract   
