--- a/research.html
+++ b/research.html
@@ -119,14 +119,14 @@
           Event-triggered Attitude Consensus of Multiple Rigid Body Systems with  Prescribed Performance</a> 
         <!-- <br> with <a href="http://public.econ.duke.edu/~psarcidi/">Peter Arcidiacono</a>,  -->
         <br> with Yang Tang</a>, Yang Shi</a>, 
-        and Xiaotai Wu</a> <br> <b>Submitted, <i>IEEE Transactions on Automatic Control</i></b> (updated Dec 10, 2022) 
+        and Xiaotai Wu</a> <br> <b>Submitted, <i>IEEE Transactions on Automatic Control</i></b> (updated Dec 10, 2022) </p><br>
 
 
     <p style="margin:0"> 
       <a style="margin:0; font-size:100%; font-weight:bold">
         Partial Quantum Consensus of Qubits Networks with Connected Topologies</a> 
         <br> with Zhu Cao</a> , Yang Tang</a>, 
-        and Jürgen Kurths</a> <br> <b>Revised &amp; Resubmitted, <i>IEEE Transactions on Cybernetics</i></b> (updated Dec 10, 2022) 
+        and Jürgen Kurths</a> <br> <b>Revised &amp; Resubmitted, <i>IEEE Transactions on Cybernetics</i></b> (updated Dec 10, 2022) </p><br>
 
 
   
@@ -176,7 +176,7 @@
         with <a>Dandan Zhang</a> and <a href="http://www.cse.zju.edu.cn/english/redir.php?catalog_id=1113878&object_id=1115940">hongye Su</a> <br> 
         <i>IEEE Transactions on Automatic Control</i>, 
         Forthcoming. <br><button class="accordion"> 
-    Abstract   
+     Abstract   
     </button>   
     <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> 
       In this paper, we propose a new random reset rule for attitude control systems, where a new Lyapunov-Foster function implies 
