--- a/research.html
+++ b/research.html
@@ -249,9 +249,11 @@
         Finally, simulation studies are conducted to verify the effectiveness of the proposed protocols.</p></div><br>
 
         <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" 
-          href="https://ieeexplore.ieee.org/document/9350198/">
-          Event-Triggered Formation Control for a Class of Uncertain Euler–Lagrange Systems: Theory and Experiment</a> <br> 
-          with <a href="http://www.ytangecust.com/">Yang Tang</a>, 
+          href="https://ieeexplore.ieee.org/document/8643985/">
+          Twisting-Based Finite-Time Consensus for Euler–Lagrange Systems With an Event-Triggered Strategy</a> <br> 
+          with 
+          <a href="http://www.ytangecust.com/">Yang Tang</a>
+          <a href="http://www.ytangecust.com/">Yang Tang</a>, 
           <a href="https://www.uvic.ca/research/labs/acipl/groupmembers/administration/profiles/shiyang.php">Yang Shi</a>,
           Wenle Zhang, 
           <a href="http://dwecust.com/">Wei Du</a>, 
@@ -270,25 +272,24 @@
           <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" 
             href="https://www.sciencedirect.com/science/article/pii/S000510982030443X">
             Event-triggered attitude consensus with absolute and relative attitude measurements</a> <br> 
-            with <a href="http://www.ytangecust.com/">Yang Tang</a>, 
-            <a href="https://www.uvic.ca/research/labs/acipl/groupmembers/administration/profiles/shiyang.php">Yang Shi</a>,
-            and Xiaotai Wu<br>
-            <i>Automatica</i>, 2020, 122: 109245.  <br><button class="accordion"> 
+            with <a href="http://dwecust.com/">Wei Du</a>,
+            <a href="http://csit.manu.edu.mk/ljupco-kocarev/"></a>Ljupco Kocarev</a>
+            <a href="http://www.ytangecust.com/">Yang Tang</a>, 
+            and <a href="https://www.pik-potsdam.de/members/kurths/homepage">Jürgen Kurths</a><br>
+            <i>IEEE Transactions on Network Science and Engineering</i>, 2019, 7 (3): 1007&ndash;1018.  <br><button class="accordion"> 
             Abstract
           </button>
           <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p>
-            In this paper, we consider the event-triggered attitude consensus of multiple rigid-body systems. 
-            Two event-triggered attitude consensus protocols are designed under the absolute attitude and relative attitude measurement, respectively. 
-            For the first case, the gnomonic projection is utilized to project the attitude to the Euclidean plane almost globally. 
-            Then, a distributed attitude consensus protocol based on the projections is proposed under the event-triggered mechanism. 
-            By using the proposed protocol and event-triggered condition (ETC), the almost global attitude consensus is achieved on a positively invariant set. 
-            Next, in order to remove the requirement of the absolute attitude information, we propose an event-triggered attitude protocol with relative 
-            attitude measurements. The Riemannian gradient descent approach is utilized to design the attitude consensus protocol on a geodesically 
-            convex set of attitude configuration space. Moreover, to overcome the continuous monitoring in the event-detection, a self-triggered strategy 
-            is presented based on the event-triggered protocol only with the relative attitude measurement. 
-            Finally, simulation studies are conducted to verify the effectiveness of the proposed protocols.</p></div><br>
-    
-    
+            In this paper, a twisting-based consensus algorithm is put forward to deal with the event-triggered finite-time consensus 
+            for networked Lagrangian systems with directed graphs. First, a fully distributed event-triggered finite-time protocol is 
+            considered, for which we can show that each agent can achieve the consensus after a settling time. In order to remove 
+            the requirement of continuous monitoring, a pull-based triggering mechanism is employed. Simultaneously, the Zeno-behavior 
+            can be excluded under a finite-time dynamic condition. Then, due to the advantages of non-chattering behaviors and finite-time 
+            convergence, a twisting-based consensus algorithm based on homogeneous techniques is developed to drive the Euler-Lagrange systems 
+            to the consensus value in a settling time. By means of Pólya's theorem and Sum of Squares tools, a polynomial Lyapunov function 
+            is constructed to verify our criteria. At last, we give a numerical example for 2-DOF prototype manipulators to 
+            verify the validity of the theoretical results.</p></div><br>
+
           <hr>
     <h2><a id="works-in-progress" class="anchor" href="#workinprogress" aria-hidden="true"><span class="octicon octicon-link">
 
