--- a/research.html
+++ b/research.html
@@ -250,10 +250,9 @@
 
         <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" 
           href="https://ieeexplore.ieee.org/document/8643985/">
-          Twisting-Based Finite-Time Consensus for Euler–Lagrange Systems With an Event-Triggered Strategy</a> <br> 
+          Event-Triggered Formation Control for a Class of Uncertain Euler–Lagrange Systems: Theory and Experiment</a> <br> 
           with 
-          <a href="http://www.ytangecust.com/">Yang Tang</a>
-          <a href="http://www.ytangecust.com/">Yang Tang</a>, 
+          <a href="http://www.ytangecust.com/">Yang Tang</a>,
           <a href="https://www.uvic.ca/research/labs/acipl/groupmembers/administration/profiles/shiyang.php">Yang Shi</a>,
           Wenle Zhang, 
           <a href="http://dwecust.com/">Wei Du</a>, 
@@ -270,8 +269,8 @@
           The experiment using three quadrotors in the outdoor environment is demonstrated to test the effectiveness of the formation protocol.</p></div><br>
     
           <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" 
-            href="https://www.sciencedirect.com/science/article/pii/S000510982030443X">
-            Event-triggered attitude consensus with absolute and relative attitude measurements</a> <br> 
+            href="https://ieeexplore.ieee.org/document/8643985/">
+            Twisting-Based Finite-Time Consensus for Euler–Lagrange Systems With an Event-Triggered Strategy</a> <br> 
             with <a href="http://dwecust.com/">Wei Du</a>,
             <a href="http://csit.manu.edu.mk/ljupco-kocarev/"></a>Ljupco Kocarev</a>
             <a href="http://www.ytangecust.com/">Yang Tang</a>, 
@@ -289,6 +288,25 @@
             to the consensus value in a settling time. By means of Pólya's theorem and Sum of Squares tools, a polynomial Lyapunov function 
             is constructed to verify our criteria. At last, we give a numerical example for 2-DOF prototype manipulators to 
             verify the validity of the theoretical results.</p></div><br>
+
+            <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" 
+              href="https://ieeexplore.ieee.org/document/9252142/">
+              Model-Free Event-Triggered Optimal Consensus Control of Multiple Euler-Lagrange Systems via Reinforcement Learning</a> <br> 
+              with Saiwei Wang, Shuai Mao, Athanasios V. Vasilakos
+              and <a href="http://www.ytangecust.com/">Yang Tang</a>, 
+              <i>IEEE Transactions on Network Science and Engineering</i>, 2021, 8 (1): 246&ndash;258.  <br><button class="accordion"> 
+              Abstract
+            </button>
+            <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p>
+              This paper develops a model-free approach to solve the event-triggered optimal consensus of multiple Euler-Lagrange systems (MELSs) 
+              via reinforcement learning (RL). Firstly, an augmented system is constructed by defining a pre-compensator to circumvent the dependence 
+              on system dynamics. Secondly, the Hamilton-Jacobi-Bellman (HJB) equations are applied to the deduction of the model-free event-triggered 
+              optimal controller. Thirdly, we present a policy iteration (PI) algorithm derived from RL, which converges to the optimal policy. 
+              Then, the value function of each agent is represented through a neural network to realize the PI algorithm. Moreover, the gradient 
+              descent method is used to update the neural network only at a series of discrete event-triggered instants. The specific form of the 
+              event-triggered condition is then proposed, and it is guaranteed that the closed-loop augmented system under the event-triggered 
+              mechanism is uniformly ultimately bounded (UUB). Meanwhile, the Zeno behavior is also eliminated. 
+              Finally, the validity of this approach is verified by a simulation example.</p></div><br>
 
           <hr>
     <h2><a id="works-in-progress" class="anchor" href="#workinprogress" aria-hidden="true"><span class="octicon octicon-link">
