--- a/research.html
+++ b/research.html
@@ -272,6 +272,27 @@
             Finally, the simulation results on a multiple rigid body network demonstrate the validity of the proposed method.</p></div><br>
 
             <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" 
+              href="https://ieeexplore.ieee.org/document/9614664/">
+              <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" 
+            href="https://ieeexplore.ieee.org/document/8643985/">
+            Quaternion-Based Attitude Synchronization With an Event-Based Communication Strategy</a> <br> 
+            with Dandan Zhang,
+            <a href="http://www.ytangecust.com/">Yang Tang</a>,  
+            and <a href="https://www.pik-potsdam.de/members/kurths/homepage">Jürgen Kurths</a><br>
+            <i>IEEE Transactions on Circuits and Systems I: Regular Papers</i>, 2022, 69(3): 1333&ndash;1346.  <br><button class="accordion"> 
+            Abstract
+          </button>
+          <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p>
+            This paper designs an event-triggering based communication strategy for the global attitude synchronization of a network of rigid bodies. 
+            To overcome the topological constraint on the manifold SO(3) , the quaternion-based hybrid control strategy is designed using a binary logic 
+            variable, relying on the relative measurements of adjacent rigid bodies, to determine the torque orientation. The Zeno-free distributed 
+            event-triggering strategies (ETSs) are designed combining with the reset of the binary logic variable to generate discrete communication 
+            instants, where only the corresponding parts of the control inputs are updated at those discrete instants. By assuming perfect knowledge 
+            of the rigid bodies’ dynamics and considering uncertainties and/or exogenous disturbances simultaneously, nominal and robust cases are 
+            analyzed to ensure the global attitude synchronization, respectively. 
+            The effectiveness of the main results is demonstrated by considering the attitude synchronization of six miniature quadrotor prototypes.</p></div><br> 
+
+            <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" 
               href="https://ieeexplore.ieee.org/document/9252142/">
               Model-Free Event-Triggered Optimal Consensus Control of Multiple Euler-Lagrange Systems via Reinforcement Learning</a> <br> 
               with Saiwei Wang, Shuai Mao, Athanasios V. Vasilakos,
@@ -355,8 +376,7 @@
             The designed event-based hybrid control scheme renders the globally asymptotic tracking control resilient 
             to DoS attacks. Simulation results are presented to show the effectiveness of the established hybrid control strategy.</p></div><br> 
               
-
-
+   
           <hr>
     <h2><a id="works-in-progress" class="anchor" href="#workinprogress" aria-hidden="true"><span class="octicon octicon-link">
 
