--- a/research.html
+++ b/research.html
@@ -272,10 +272,8 @@
             Finally, the simulation results on a multiple rigid body network demonstrate the validity of the proposed method.</p></div><br>
 
             <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" 
-              href="https://ieeexplore.ieee.org/document/9614664/">
-              <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" 
-            href="https://ieeexplore.ieee.org/document/8643985/">
-            Quaternion-Based Attitude Synchronization With an Event-Based Communication Strategy</a> <br> 
+              href="https://ieeexplore.ieee.org/document/9614664/">Quaternion-Based Attitude Synchronization With 
+              an Event-Based Communication Strategy</a> <br> 
             with Dandan Zhang,
             <a href="http://www.ytangecust.com/">Yang Tang</a>,  
             and <a href="https://www.pik-potsdam.de/members/kurths/homepage">Jürgen Kurths</a><br>
