--- a/research.html
+++ b/research.html
@@ -161,11 +161,11 @@
 
     <hr>
 
-    <h2><a id="recent-papers-updated" class="anchor" href="#workingpapers" aria-hidden="true">
+    <!-- <h2><a id="recent-papers-updated" class="anchor" href="#workingpapers" aria-hidden="true">
       <span class="octicon octicon-link"></span></a>Working Papers</h2>
     <p style="margin:0"> Coming soon. <br> <br> 
 
-    <hr>
+    <hr> -->
 
     <h2><a id="published-papers-updated" class="anchor" href="#publications" aria-hidden="true">
       <span class="octicon octicon-link"></span></a>Published &amp; Forthcoming Papers</h2>
@@ -355,8 +355,6 @@
 
             <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" 
               href="https://ieeexplore.ieee.org/document/8765376/">
-              <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" 
-            href="https://ieeexplore.ieee.org/document/8643985/">
             A Resilient Attitude Tracking Algorithm for Mechanical Systems</a> <br> 
             with 
             <a href="http://www.ytangecust.com/">Yang Tang</a>, Dandan Zhang, Dachen Yao, 
