--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@
         </div>
         <br>
 
-    <p><b>Contact:</b><br>Department of Automation<br>East China University of Science and Technology,<br>130 Meilong Road<br>Shanghai 200237</p>
+    <p><b>Contact:</b><br>Department of Automation<br>East China University of Science and Technology,<br>130 Meilong Road<br>Shanghai 200237, China<br>
+    (办公地址：上海市徐汇区梅陇路130号实验十九楼)</p>
     <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </header>
       <section>
