--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
       </header>
       <section>
       <img src="photo1.jpg" height="209" width="140" alt="Xin Jin"></h3>
-      <p>I am currently a Postdoctoral of Control Science and Engineering</a> at the <a href="https://www.ecust.edu.cn/">East China Univeristy of Science and Technology</a> 
+      <p>I am currently a Postdoctoral fellow of Control Science and Engineering</a> at the <a href="https://www.ecust.edu.cn/">East China Univeristy of Science and Technology</a> 
         and Research Affiliate at the <a href="https://cise.ecust.edu.cn/">Department of Automation</a>. 
         I graduated with a PhD in Control Science and Engineering</a> 
         from East China Univeristy of Science and Technology University</a> in June 2021.</p>
