--- a/research.html
+++ b/research.html
@@ -87,8 +87,8 @@
         <p>Research Affiliate<br><a href="https://cise.ecust.edu.cn/">Department of Automation</a></p>
     <h3><a href="https://jx9810.github.io/">Home</a></h3>
         <h3><a href="https://jx9810.github.io/research.html">Research</a></h3>
-    <h3><a href="https://jx9810.github.io/research/CV.pdf">CV</a></h3>  
-        <!-- <h3><a href="https://jx9810.github.io/code.html">Code</a></h3> 
+     <!--  <h3><a href="https://jx9810.github.io/research/CV.pdf">CV</a></h3>  
+      <h3><a href="https://jx9810.github.io/code.html">Code</a></h3> 
         <h3><a href="https://jx9810.github.io/teaching.html">Teaching</a></h3> 
         <h3><a href="https://jx9810.github.io/personal.html">Personal</a></h3> -->
     <b>Social</b><br>
