--- a/personal.html
+++ b/personal.html
@@ -83,11 +83,11 @@
     <div class="wrapper">
       <header>
         <h1>Xin Jin</h1>
-        <p>Postdoc. of Information Science and Engineering at<br>East China Univeristy of Science and Technology</p>
+        <p>Young Researcher in Research Institute of Intelligent Complex Systems at<br>Fudan University</p>
         <p>Research Affiliate<br><a href="http://legacy.iza.org/en/webcontent/personnel/photos/index_html?key=24155">Department of Automation</a></p>
     <h3><a href="https://jx9810.github.io/">Home</a></h3>
         <h3><a href="https://jx9810.github.io/research.html">Research</a></h3>
-    <h3><a href="https://tyleransom.github.io/research/CV.pdf">CV</a></h3>  
+   <!-- <h3><a href="https://tyleransom.github.io/research/CV.pdf">CV</a></h3>  -->
         <h3><a href="https://jx9810.github.io/code.html">Code</a></h3> 
         <h3><a href="https://jx9810.github.io/teaching.html">Teaching</a></h3> 
         <h3><a href="https://jx9810.github.io/personal.html">Personal</a></h3>
