--- a/index.html
+++ b/index.html
@@ -104,12 +104,12 @@
         </div>
         <br>
 
-    <p><b>Contact:</b><br>
-      Department of Automation<br>
-      East China University of Science and Technology, Shanghai, China<br>
-      <b>Address:</b><br>
-      No.130 Meilong Road, Shanghai 200237, China<br>
-    (地址：上海市徐汇区梅陇路130号实验十九楼)</p>
+     <p><b>Contact:</b><br>
+          Research Institute of Intelligent Complex Systems<br>
+          Fudan University, Shanghai, China<br>
+          <b>Address:</b><br>
+          No.220 Handan Road, Shanghai 200433, China<br>
+        (地址：上海市杨浦区邯郸路220号)</p>
     <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </header>
       <section>
