--- a/index.html
+++ b/index.html
@@ -114,10 +114,9 @@
       </header>
       <section>
       <img src="photo1.jpg" height="209" width="140" alt="Xin Jin"></h3>
-      <p>I am currently a Postdoctoral fellow of Control Science and Engineering</a> at the <a href="https://www.ecust.edu.cn/">East China Univeristy of Science and Technology</a> 
-        and Research Affiliate at the <a href="https://cise.ecust.edu.cn/">Department of Automation</a>. 
+      <p>I am currently a young researcher of <a href="https://iics.fudan.edu.cn"> Research Institute of Intelligent Complex Systems</a> at the <a href="https://fudan.edu.cn">Fudan University</a>. 
         I graduated with a PhD in Control Science and Engineering</a> 
-        from East China Univeristy of Science and Technology University</a> in June 2021.</p>
+        from East China University of Science and Technology University</a> in June 2021.</p>
       <p>My research interests include rigid body, attitude control, multi-agent systems, event-triggered control, and applications of robotics.</p>
       <img src="research/bird.jpg" height="150" width="230">
       <img src="research/distributed_spacecraft.jpg" height="150" width="230">
